fix: delete spaces and double border-styles

--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -2,7 +2,6 @@
   background-color: transparent;
   padding: 0;
   margin: 0 0 0 auto;
-  border: none;
   width: 150px;
   height: 50px;
   cursor: pointer;
