--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -4,7 +4,6 @@
   height: 24px;
   padding: 0;
   margin: 0;
-  border: none;
   border: 1px solid #FFFFFF;
   cursor: pointer;
   display: flex;
